--- a/index.html
+++ b/index.html
@@ -118,43 +118,43 @@
             <li style="list-style: none;"><h3><b>Automated Music Festival Poster Image Generation</b></h3>
             <a href="https://github.com/cci-student/NLP-project" target="_blank">View Project</a>
             <ul>
-                <li>Deep Learning Image Generation: Integrated Stable Diffusion 3 (SD3) and Florence-2 models for high-quality automated poster generation with advanced text-to-image synthesis capabilities</li>
-                <li>LLM-Powered Prompt Engineering: Implemented large language model integration for dynamic prompt optimization and refinement, enabling context-aware content generation</li>
-                <li>Hyper-Personalization Pipeline: Developed automated workflow for generating customized promotional content based on user demographics and preferences with scalable batch processing</li>
-                <li>Multi-Modal AI Integration: Combined computer vision models with natural language processing for intelligent text encoding and visual content generation</li>
-                <li>Production-Ready Workflow: Built end-to-end automation pipeline including image loading, resizing, text processing, generation, and output management with iterative refinement capabilities</li>
-                <li>Scalable Architecture: Designed system for processing multiple images with efficient resource management and automated quality control mechanisms</li>
+                <li><b>Deep Learning Image Generation:</b> Integrated Stable Diffusion 3 (SD3) and Florence-2 models for high-quality automated poster generation with advanced text-to-image synthesis capabilities</li>
+                <li><b>LLM-Powered Prompt Engineering:</b> Implemented large language model integration for dynamic prompt optimization and refinement, enabling context-aware content generation</li>
+                <li><b>Hyper-Personalization Pipeline:</b> Developed automated workflow for generating customized promotional content based on user demographics and preferences with scalable batch processing</li>
+                <li><b>Multi-Modal AI Integration:</b> Combined computer vision models with natural language processing for intelligent text encoding and visual content generation</li>
+                <li><b>Production-Ready Workflow:</b> Built end-to-end automation pipeline including image loading, resizing, text processing, generation, and output management with iterative refinement capabilities</li>
+                <li><b>Scalable Architecture:</b> Designed system for processing multiple images with efficient resource management and automated quality control mechanisms</li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
             <a href="https://git.arts.ac.uk/23046385/AI-4-Media-Project-Ketan-Sharma" target="_blank">View Project</a>
             <ul>
-                <li>Custom CNN Architecture: Built a 4-layer convolutional neural network with batch normalization and dropout regularization, achieving 82% accuracy on emotion classification across 7 emotional states.</li>
-                <li>Real-time Computer Vision Pipeline: Implemented an OpenCV-based face detection and emotion recognition system with optimized frame processing for real-time webcam input.</li>
-                <li>Advanced Model Training: Employed class-weighted loss functions, weighted random sampling, and data augmentation to handle imbalanced datasets and improve model generalization.</li>
-                <li>Multi-threaded Architecture: Designed a concurrent processing system with separate threads for video capture, emotion detection, and audio playback to ensure smooth real-time performance.</li>
-                <li>Audio Processing Integration: Integrated librosa for dynamic tempo scaling and time-stretching algorithms that modify music playback based on detected emotional states.</li>
-                <li>PyTorch Deep Learning: Utilized the PyTorch framework with the Adam optimizer, learning rate scheduling, and label smoothing for robust model training and convergence.</li>
+                <li><b>Custom CNN Architecture:</b> Built a 4-layer convolutional neural network with batch normalization and dropout regularization, achieving 82% accuracy on emotion classification across 7 emotional states.</li>
+                <li><b>Real-time Computer Vision Pipeline:</b> Implemented an OpenCV-based face detection and emotion recognition system with optimized frame processing for real-time webcam input.</li>
+                <li><b>Advanced Model Training:</b> Employed class-weighted loss functions, weighted random sampling, and data augmentation to handle imbalanced datasets and improve model generalization.</li>
+                <li><b>Multi-threaded Architecture:</b> Designed a concurrent processing system with separate threads for video capture, emotion detection, and audio playback to ensure smooth real-time performance.</li>
+                <li><b>Audio Processing Integration:</b> Integrated librosa for dynamic tempo scaling and time-stretching algorithms that modify music playback based on detected emotional states.</li>
+                <li><b>PyTorch Deep Learning:</b> Utilized the PyTorch framework with the Adam optimizer, learning rate scheduling, and label smoothing for robust model training and convergence.</li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Virtual Real-time Clothing Try-on System</b></h3>
             <a href="https://github.com/23046385/AI-Powered-Virtual-Try-On-System" target="_blank">View Project</a>
             <ul>
-                <li>Currently building a real-time virtual fitting solution that enables users to try on clothing digitally using computer vision and augmented reality techniques</li>
-                <li>Project in active development phase</li>
+                <li><b>Currently building</b> a real-time virtual fitting solution that enables users to try on clothing digitally using computer vision and augmented reality techniques</li>
+                <li><b>Project in active development phase</b></li>
             </ul>
             </li>
 
             <li style="list-style: none;"><h3><b>Health Habit Buddy</b></h3>
             <a href="https://github.com/23046385/Health-Habit-Buddy" target="_blank">View Project</a>
             <ul>
-                <li>Local AI Integration: Implemented offline-first architecture using Ollama and LLaMA 2 model for privacy-focused AI text generation without cloud dependencies</li>
-                <li>Streamlit Framework: Built clean, modern user interface using Streamlit with minimalist black-and-white design for optimal user experience</li>
-                <li>Privacy-Focused Architecture: Developed 100% local processing system ensuring user data remains on-device with no external data transmission</li>
-                <li>Personalized AI Messaging: Created intelligent encouragement system that generates contextual motivational messages based on user habit completion patterns</li>
-                <li>Offline-First Design: Engineered application to function completely offline, targeting wellness creators and health-conscious users prioritizing data privacy</li>
+                <li><b>Local AI Integration:</b> Implemented offline-first architecture using Ollama and LLaMA 2 model for privacy-focused AI text generation without cloud dependencies</li>
+                <li><b>Streamlit Framework:</b> Built clean, modern user interface using Streamlit with minimalist black-and-white design for optimal user experience</li>
+                <li><b>Privacy-Focused Architecture:</b> Developed 100% local processing system ensuring user data remains on-device with no external data transmission</li>
+                <li><b>Personalized AI Messaging:</b> Created intelligent encouragement system that generates contextual motivational messages based on user habit completion patterns</li>
+                <li><b>Offline-First Design:</b> Engineered application to function completely offline, targeting wellness creators and health-conscious users prioritizing data privacy</li>
             </ul>
             </li>
 
