--- a/index copy.html
+++ b/index copy.html
@@ -80,7 +80,7 @@
             </ul>
             </li>
 
-            <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
+            <li style="list-style: none;"><h3><b>AI-Powered Emotion-Responsive Music System</b></h3>
             <a href="https://git.arts.ac.uk/23046385/AI-4-Media-Project-Ketan-Sharma" target="_blank">View Project</a>
             <ul>
                 <li>Developed a deep learning-based emotion recognition system for media playback applications using computer vision techniques and neural networks</li>
