--- a/menu.html
+++ b/menu.html
@@ -7,9 +7,9 @@
       <img class="noselect" src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a href="file/cv-template.pdf">CV</a>
-      <a href="http://www.linkedin.com/pub/cci-student">LinkedIn</a>
-      <a href="http://github.com/cci-student">GitHub</a>
+      <a href="file/CV-Main.pdf">CV</a>
+      <a href="https://www.linkedin.com/in/ketan7sharma/">LinkedIn</a>
+      <a href="https://github.com/23046385">GitHub</a>
     </div>
   </div>
 </div>
