--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </ul>
             </li>
 
-            <li style="list-style: none;"><h3><b>Emotion Detection Model</b></h3>
+            <li style="list-style: none;"><h3><b>AI-Powered Emotion-Responsive Music System</b></h3>
             <a href="https://git.arts.ac.uk/23046385/AI-4-Media-Project-Ketan-Sharma" target="_blank">View Project</a>
             <ul>
                 <li><b>Custom CNN Architecture:</b> Built a 4-layer convolutional neural network with batch normalization and dropout regularization, achieving 82% accuracy on emotion classification across 7 emotional states.</li>
