--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="flex-item flex-column">
             <h2>Ketan Sharma</h2>
             <p class="text">
-              London, UK | <a href="https://www.linkedin.com/in/ketan-sharma-b7556a1b2/" target="_blank">LinkedIn</a> | <a href="https://github.com/ketan7sharma" target="_blank">GitHub</a><br>
+              London, UK | <a href="https://www.linkedin.com/in/ketan-sharma-b7556a1b2/" target="_blank">LinkedIn</a> | <a href="https://github.com/23046385" target="_blank">GitHub</a><br>
               ketan7sharma@gmail.com | +44 07818980305
             </p>
           </div>
